--- a/resources/views/home.twig
+++ b/resources/views/home.twig
@@ -4,8 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{{ name }}</title>
+  <link rel="stylesheet" href="/css/app.css">
+  <script src="/js/app.js" defer></script>
 </head>
-<body>
-  Welcome!
+<body class="font-sans font-normal text-base text-gray-800 bg-white antialiased">
+  <div class="p-6">
+    Hello, world! Welcome to {{ name }}.
+  </div>
 </body>
 </html>
