Improve container usage

--- a/resources/views/home.twig
+++ b/resources/views/home.twig
@@ -9,7 +9,7 @@
 </head>
 <body class="font-sans font-normal text-base text-gray-800 bg-white antialiased">
   <div class="p-6">
-    Hello, world! Welcome to {{ name }}.
+    Hello, world!
   </div>
 </body>
 </html>
