--- a/resources/views/home.twig
+++ b/resources/views/home.twig
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>{{ name }}</title>
+  <title>{{ app.name }}</title>
   <link rel="stylesheet" href="/css/app.css">
   <script src="/js/app.js" defer></script>
 </head>
-<body class="font-sans font-normal text-base text-gray-800 bg-white antialiased">
+<body class="font-sans text-base antialiased font-normal text-gray-800 bg-white">
   <div class="p-6">
     Hello, world!
   </div>
